<resources>
    <string name="app_name">Jo 桌遊</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dash">-</string>
    <string name="party">聚會</string>
    <string name="game_viewed">遊戲總覽</string>
    <string name="tools">小工具</string>
    <string name="profile">個人</string>
    <string name="new_party">舉辦聚會</string>
    <string name="my_party_2">我的聚會 》</string>
    <string name="see_all">看全部 》</string>
    <string name="already_join">✓已加入</string>
    <string name="host">主辦</string>
    <string name="lets_party">來場聚會吧!</string>
    <string name="country">縣市</string>
    <string name="date">日期</string>
    <string name="date_sample">11/8 ~ 11/14</string>
    <string name="location">地點</string>
    <string name="time">時間</string>
    <string name="game">遊戲</string>
    <string name="play_list">遊玩清單</string>
    <string name="host_">主辦:</string>
    <string name="location_">地點:</string>
    <string name="time_">時間:</string>
    <string name="note_">說明:</string>
    <string name="msg">留言</string>
    <string name="join">參加</string>
    <string name="out">退出</string>
    <string name="require_player_qty">徵求人數</string>
    <string name="join_players">參加者</string>
    <string name="welcome">Welcome!</string>
    <string name="bye">"Bye~"</string>
    <string name="peopleQty">人數:</string>
    <string name="sample_game_name">卡坦島</string>
    <string name="sample_game_name2">富饒之城</string>
    <string name="all">全部</string>
    <string name="hots">熱門</string>
    <string name="bgg_rank">BGG排行榜</string>
    <string name="top_rating">評分最高</string>
    <string name="sort_filter">排序與篩選</string>
    <string name="more_info">更多資訊</string>
    <string name="dice">骰子</string>
    <string name="timer">計時器</string>
    <string name="spin_bottle">轉瓶</string>
    <string name="polygraph">測謊機</string>
    <string name="scoreboard">記分板</string>
    <string name="sample_user_name">AKuan</string>
    <string name="user_profile_status">動態...</string>
    <string name="my_rating">我的評分</string>
    <string name="my_photos">我的相片</string>
    <string name="my_favorite">我的收藏</string>
    <string name="my_party">我的聚會</string>
    <string name="recently_viewed">最近瀏覽遊戲</string>
    <string name="no_recently_viewed">無最近瀏覽遊戲</string>
    <string name="user">用戶</string>
    <string name="hint_title">標題</string>
    <string name="hint_date">日期</string>
    <string name="hint_time">時間</string>
    <string name="note">活動說明</string>
    <string name="hint_add_game">加入遊戲</string>
    <string name="create">創建</string>
    <string name="data_time"><![CDATA[日期 & 時間]]></string>
    <string name="people_qty">人數</string>
    <string name="player_qty">遊戲人數:</string>
    <string name="play_time">遊戲時間:</string>
    <string name="type">類型:</string>
    <string name="game_desc_">遊戲簡介:</string>
    <string name="your_rating">我的評分</string>
    <string name="go_to_msg">前往留言板</string>
    <string name="favorite">收藏</string>
    <string name="show_msg">顯示留言</string>
    <string name="to"> - </string>
    <string name="man">人</string>
    <string name="mins">分鐘</string>
    <string name="host_x">主辦x</string>
    <string name="party_x">聚會x</string>
    <string name="my_status">個人狀態</string>
    <string name="send">送出</string>
    <string name="cancel">取消</string>
    <string name="i_think">我想...</string>
    <string name="draw_lots">抽籤</string>
    <string name="dice_qty">骰子數量</string>
    <string name="total">總和</string>
    <string name="roll">Roll</string>
    <string name="new_msg">新增留言...</string>
    <string name="send_ok">發送成功!</string>
    <string name="create_game_ok">新增遊戲成功!</string>
    <string name="creat_ok">創建成功!</string>
    <string name="favorite_in">已加入收藏!</string>
    <string name="favorite_out">已移出收藏!</string>
    <string name="remove">移除</string>
    <string name="spin">SPIN</string>
    <string name="start">start</string>
    <string name="start_test">開始測試</string>
    <string name="already_in_list">已經在清單中了</string>
    <string name="ask_rating">您將如何評分</string>
    <string name="rating">評分</string>
    <string name="remove_rating">移除評分</string>
    <string name="q">？</string>
    <string name="rating_ok">評分成功!</string>
    <string name="remove_ok">移除成功</string>
    <string name="error">發生了不可預期的錯誤!</string>
    <string name="add_friend">加朋友</string>
    <string name="near_party">附近聚會</string>
    <string name="cover_image">封面圖片</string>
    <string name="basic_info">基本資訊</string>
    <string name="nothing">nothing</string>
    <string name="photo">相片</string>
    <string name="upload_ok">上傳成功</string>
    <string name="upload_fail">上傳失敗</string>
    <string name="album">相簿</string>
    <string name="stop">停止</string>
    <string name="pause">暫停</string>
    <string name="coming_party">近期聚會</string>
    <string name="no_coming_party">無近期聚會</string>
    <string name="search">搜尋</string>
    <string name="party_map">聚會地圖</string>
    <string name="geting_location">正在取得目前位置...</string>
    <string name="maps">地圖</string>
    <string name="no_game">資料庫查無: </string>
    <string name="open_browser">開啟瀏覽器搜尋</string>
    <string name="google_search">https://www.google.com/search?q=</string>
    <string name="is_over">已結束</string>
    <string name="searching">正在搜尋...</string>
    <string name="login_fail">登入失敗!</string>
    <string name="logout">登出</string>
    <string name="camp">陣營</string>
    <string name="economy">經濟</string>
    <string name="scheming">心機</string>
    <string name="type_party">派對</string>
    <string name="city_build">城市建設</string>
    <string name="reset">重設</string>
    <string name="plz_write">還有重要資訊沒有填寫喔!</string>
    <string name="from_favorite">從收藏中選取</string>
    <string name="in">加入</string>
    <string name="clear">清除</string>
    <string name="selected">以選取</string>
    <string name="num">個</string>
    <string name="input_game">輸入遊戲名</string>
    <string name="game_tools">遊戲工具:</string>
    <string name="rating_">遊戲評分:</string>
    <string name="add_game">新增遊戲</string>
    <string name="game_image">遊戲圖片</string>
    <string name="game_name">遊戲名稱</string>
    <string name="min_player_qty">最小遊玩人數</string>
    <string name="max_player_qty">最大遊玩人數</string>
    <string name="play_time_mins">遊戲時間（分鐘）</string>
    <string name="game_desc">遊戲簡介</string>
    <string name="add">新增</string>
    <string name="add_game_data">新增遊戲資料</string>
    <string name="no_data">查無資料</string>
    <string name="add_ok">創增成功!</string>
    <string name="friend">朋友</string>
    <string name="see_friend">朋友》</string>
    <string name="see_photo">相片》</string>
    <string name="see_favorite">收藏》</string>
    <string name="see_rating">評分 》</string>
    <string name="send_request_ok">已發送交友邀請!</string>
    <string name="edit_profile">編輯個人檔案</string>
    <string name="notification">通知</string>
    <string name="no_photo">目前沒有相片</string>
    <string name="no_notification">目前沒有通知</string>
    <string name="no_rating">目前沒有已評分的遊戲</string>
    <string name="no_party">目前沒有聚會紀錄</string>
    <string name="no_host">目前沒有主辦紀錄</string>
    <string name="no_friend">目前沒有朋友</string>
    <string name="no_favorite">目前沒有收藏的遊戲</string>
    <string name="draw">抽!</string>
    <string name="cant_empty">內容不能為空!</string>
    <string name="plz_input_draw_item">請新增抽籤項目!</string>
    <string name="decide_you">就決定是你了!</string>
    <string name="finish">結束</string>
    <string name="timesup">時間到!</string>
    <string name="polygraph_desc">受測者請持穩手機，並按下開始測試</string>
    <string name="report_him">檢舉該用戶</string>
    <string name="report">檢舉</string>
    <string name="plz_input_thing">請輸入事由</string>
    <string name="google_play_want_see_this">感謝您提出檢舉，我們會立即進行審查，如果這位使用者確實違反了 Jo桌遊 的《社群規範》，我們就會對他做出懲處，情節嚴重的話我們會移除該使用者帳號以及他所有已發布的內容。

        \n \n
    Jo桌遊 的《社群規範》如下:
帳號可能受到終止處分的原因：
                     \n
\n1.以任何內容形式反覆發布含有騷擾、濫用和/或仇恨內容的相片或文字
\n2.情節重大的單次騷擾/濫用行為，例如掠奪性行為、垃圾內容或色情內容
\n3.帳號經常違反政策規定，例如出現仇恨言論、做出騷擾行為或冒用他人身分
     \n\n
如果帳號遭到終止，您就有可能無法使用、擁有或建立其他 JO桌遊帳戶。帳號遭到終止時，帳號擁有者會收到一封電子郵件，內文詳細說明了終止的原因。
如果您認為自己的帳號不應遭到終止，請填寫申訴信件提出申訴。
請勿重複提交同一項申訴要求，以免我們因審查工作量增加而導致回覆時間延遲。
請盡量在信件中提供完整資訊，包括帳號ID。提供的資訊越詳盡，越有助我們處理您的要求。


kuanappstudio@gmail.com</string>
    <string name="google_play_want_see_this3">感謝您提出檢舉，我們會立即進行審查，如果這則留言確實違反了 Jo桌遊 的《社群規範》，我們就會移除它，並對違規的使用者進行懲處，情節嚴重的話我們會移除該使用者帳號以及他所有已發布的內容。
    </string>
    <string name="google_play_want_see_this4">感謝您提出檢舉，我們會立即進行審查，如果這張相片確實違反了 Jo桌遊 的《社群規範》，我們就會移除它，並對違規的使用者進行懲處，情節嚴重的話我們會移除該使用者帳號以及他所有已發布的內容。
    </string>
    <string name="google_play_want_see_this2">若您想要使用"Jo桌遊"，請您詳閱並接受以下使用條款:

帳號終止規定:
因違反《社群規範》而受到終止處分
帳號可能受到終止處分的原因：
                     \n
\n1.以任何內容形式反覆發布含有騷擾、濫用和/或仇恨內容的相片或文字
\n2.情節重大的單次騷擾/濫用行為，例如掠奪性行為、垃圾內容或色情內容
\n3.帳號經常違反政策規定，例如出現仇恨言論、做出騷擾行為或冒用他人身分
     \n\n
如果帳號遭到終止，您就有可能無法使用、擁有或建立其他 JO桌遊帳戶。帳號遭到終止時，帳號擁有者會收到一封電子郵件，內文詳細說明了終止的原因。
如果您認為自己的帳號不應遭到終止，請填寫申訴信件提出申訴。
請勿重複提交同一項申訴要求，以免我們因審查工作量增加而導致回覆時間延遲。
請盡量在信件中提供完整資訊，包括帳號ID。提供的資訊越詳盡，越有助我們處理您的要求。


kuanappstudio@gmail.com</string>
    <string name="rule">Jo桌遊 的《社群規範》如下:
帳號可能受到終止處分的原因：
                     \n
\n1.以任何內容形式反覆發布含有騷擾、濫用和/或仇恨內容的相片或文字
\n2.情節重大的單次騷擾/濫用行為，例如掠奪性行為、垃圾內容或色情內容
\n3.帳號經常違反政策規定，例如出現仇恨言論、做出騷擾行為或冒用他人身分
     \n\n
如果帳號遭到終止，您就有可能無法使用、擁有或建立其他 JO桌遊帳戶。帳號遭到終止時，帳號擁有者會收到一封電子郵件，內文詳細說明了終止的原因。
如果您認為自己的帳號不應遭到終止，請填寫申訴信件提出申訴。
請勿重複提交同一項申訴要求，以免我們因審查工作量增加而導致回覆時間延遲。
請盡量在信件中提供完整資訊，包括帳號ID。提供的資訊越詳盡，越有助我們處理您的要求。


kuanappstudio@gmail.com</string>
    <string name="report_bad">檢舉不當內容</string>
    <string name="ask_out">退出?</string>
    <string name="i_out">我要退出!</string>
    <string name="report_ok">檢舉已送出</string>
    <string name="block_user">封鎖該用戶</string>
    <string name="see_rule">社群規範</string>
    <string name="block">封鎖需求已送出，我們會立即進行後續事宜，您將不會看到任何有關該使用者發布的內容及無法建立朋友關係。</string>
    <string name="permission_msg">定位功能需同意位置權限才可使用</string>
    <string name="ok">確定</string>
    <string name="permission_setting_msg">若要使用定位功能，您需要手動在“設置”中允許位置權限</string>
    <string name="no_gps">GPS尚未開啟</string>
    <string name="need_gps">使用定位功能需要開啟GPS</string>
    <string name="go_to_open">前往開啟</string>
    <string name="cant_get_location">無法取得目前位置</string>
    <string name="already_have">已存在資料庫內!</string>
    <string name="enter_game_name">請輸入遊戲名</string>
    <string name="enter_title">請填寫標題!</string>
    <string name="enter_time">請選擇時間!</string>
    <string name="enter_game">請加入遊戲!</string>
    <string name="enter_desc">請填寫說明!</string>
    <string name="enter_people_qty">請填寫徵求人數!</string>
    <string name="enter_place">請填寫地點!</string>
    <string name="enter_content">請填寫內容</string>
    <string name="already_in_draw_list">已經在抽籤項目了!</string>
    <string name="term">Jo桌遊使用條款</string>
    <string name="accept">接受</string>
    <string name="reject">拒絕</string>
    <string name="register_fail">註冊失敗!</string>
    <string name="rating_fail">評分失敗!</string>
    <string name="insert_fail">加入失敗!</string>
    <string name="remove_fail">刪除失敗!</string>
    <string name="check_internet">請檢查網路連線</string>
    <string name="delete_msg">刪除留言\n</string>
    <string name="cant_get_msg">無法取得留言</string>
    <string name="cant_get_friend">無法取得好友</string>
    <string name="plz_pick_image">請選擇遊戲圖片!</string>
    <string name="plz_enter_game_name">請輸入遊戲名!</string>
    <string name="plz_enter_min_player">請輸入最小遊玩人數!</string>
    <string name="plz_enter_max_player">請輸入最大遊玩人數!</string>
    <string name="plz_enter_game_time">請輸入遊戲時間!</string>
    <string name="plz_enter_game_desc">請輸入遊戲簡介!</string>
    <string name="plz_pick_type">請選擇至少一種類型!</string>
    <string name="create_failed">創建失敗QQ</string>
    <string name="compliance_ugc">請遵守《社群規範》</string>
    <string name="profile_image">頭像</string>
    <string name="nick_name">暱稱</string>
    <string name="introduction">簡介</string>
    <string name="plz_enter_user_name">請輸入暱稱!</string>
    <string name="update_ok">更新成功!</string>
    <string name="update">更新</string>
</resources>