<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/partyFragment"
        android:icon="@drawable/ic_home"
        android:iconTint="@color/black"

        android:title="@string/party"/>

    <item
        android:id="@+id/gameFragment"
        android:icon="@drawable/ic_game"
        android:iconTint="@color/black"

        android:title="@string/game_viewed"/>

    <item
        android:id="@+id/toolFragment"
        android:icon="@drawable/ic_tool"
        android:iconTint="@color/black"
        android:title="@string/tool"/>

    <item
        android:id="@+id/profileFragment"
        android:iconTint="@color/black"

        android:icon="@drawable/ic_profile"
        android:title="@string/profile"/>

</menu>

    <!--ID一定要跟navigation檔案裡的一樣!!!-->