<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.edit.EditFragment">

    <data>

        <import type="com.kappstudio.joboardgame.util.LoadApiStatus" />

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.kappstudio.joboardgame.ui.edit.EditViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        android:paddingLeft="8dp"
        android:paddingRight="8dp">

        <TextView
            android:id="@+id/tv_title_profile_image"
            style="@style/titleStyleWhite2"
            android:text="@string/profile_image"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/iv_profile"
            android:layout_width="0dp"
            android:layout_height="120dp"
            android:layout_marginTop="16dp"
            android:background="@color/white"
            app:imgUrl="@{viewModel.me.image}"
            android:elevation="4dp"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:shapeAppearanceOverlay="@style/circle" />


        <ImageButton
            android:id="@+id/btn_edit_image"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/bg_ripple"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="@+id/iv_profile"
            app:layout_constraintStart_toEndOf="@+id/iv_profile"
            app:srcCompat="@drawable/ic_edit_24"
            app:tint="@color/purple_light_9148F9" />

        <TextView
            android:id="@+id/tv_title_info"
            style="@style/titleStyleWhite2"
            android:layout_marginTop="24dp"
            android:text="@string/basic_info"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_profile" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tl_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:boxCollapsedPaddingTop="2dp"
            app:boxStrokeWidth="0.7dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/tv_title_info"
            app:layout_constraintTop_toBottomOf="@+id/tv_title_info">

            <EditText
                android:id="@+id/et_name"
                style="@style/EdittextUser"
                android:hint="@string/nick_name"
                android:inputType="text"
                android:maxLength="30"
                android:text="@={viewModel.name}" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tl_info"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:boxCollapsedPaddingTop="2dp"
            app:boxStrokeWidth="0.7dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/tv_title_info"
            app:layout_constraintTop_toBottomOf="@+id/tl_name">

            <EditText
                android:id="@+id/et_info"
                style="@style/EdittextUser"
                android:hint="@string/introduction"
                android:inputType="text|textMultiLine"
                android:maxLength="200"
                android:maxLines="6"
                android:text="@={viewModel.info}" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tv_ugc"
            style="@style/textClickBlue"
            android:layout_marginBottom="4dp"
            android:text="@string/compliance_ugc"
            app:layout_constraintBottom_toTopOf="@id/btn_update"
            app:layout_constraintEnd_toEndOf="@id/btn_update"  />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_update"
            android:layout_width="0dp"
            android:layout_height="@dimen/height_btn_56dp"
            android:background="@drawable/bg_btn_black3a3a3a"
            android:enabled="@{viewModel.status != LoadApiStatus.LOADING }"
            android:letterSpacing="0.25"
            android:onClick="@{ ()-> viewModel.prepareUpdate()}"
            android:text="@string/create"
            android:textColor="@color/white_text_fffcff"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.125"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tl_info"
            app:layout_constraintVertical_bias="1.0" />

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/lottie_loading"
            android:layout_width="0dp"
            android:layout_height="230dp"
            android:layout_centerInParent="true"
            android:elevation="50dp"
            android:visibility="@{viewModel.status == LoadApiStatus.LOADING ? View.VISIBLE : View.GONE}"
            app:layout_constraintBottom_toBottomOf="@id/btn_update"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.7"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/anim_poker"
            tools:visibility="gone" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>